NetBSD Problem Report #50683

From www@NetBSD.org  Thu Jan 21 16:25:24 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 4EDB37ABE0
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 21 Jan 2016 16:25:24 +0000 (UTC)
Message-Id: <20160121162523.63B2E7ACC3@mollari.NetBSD.org>
Date: Thu, 21 Jan 2016 16:25:23 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/arch/mipsco/stand/installboot/installboot.c:211: memory leak
X-Send-Pr-Version: www-1.0

>Number:         50683
>Category:       port-mipsco
>Synopsis:       src/sys/arch/mipsco/stand/installboot/installboot.c:211: memory leak
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    port-mipsco-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Jan 21 16:30:00 +0000 2016
>Closed-Date:    Thu Jan 21 21:05:28 +0000 2016
>Last-Modified:  Thu Jan 21 21:05:28 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160121
>Organization:
>Environment:
>Description:
[src/sys/arch/mipsco/stand/installboot/installboot.c:211]: (error) Memory leak: boot_code

Source code is

    if (nowrite) {
        if (verbose)
            fprintf(stderr, "not writing\n");
        return;
    }

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50683 CVS commit: src/sys/arch/mipsco/stand/installboot
Date: Thu, 21 Jan 2016 11:58:36 -0500

 Module Name:	src
 Committed By:	christos
 Date:		Thu Jan 21 16:58:36 UTC 2016

 Modified Files:
 	src/sys/arch/mipsco/stand/installboot: installboot.c

 Log Message:
 PR/50683: David Binderman: Fix memory leak.


 To generate a diff of this commit:
 cvs rdiff -u -r1.9 -r1.10 src/sys/arch/mipsco/stand/installboot/installboot.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Thu, 21 Jan 2016 21:05:28 +0000
State-Changed-Why:
Fixed by christos, thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.