PR/50683: David Binderman: Fix memory leak.